--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "gulp-uglify": "^1.2.0",
     "tiny-lr": "^0.1.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "browser-sync": "^2.7.12",
+    "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.5.2"
+  }
 }
